[FIX] sap.m.ObjectStatus: vertically aligned in a from now
BCP: 002075129500003306122021

--- a/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
@@ -337,11 +337,13 @@
 */
 .sapUiForm.sapUiFormEdit .sapMObjStatus {
 	padding-top: 0.875rem;
+	padding-bottom: 0.875rem;
 	line-height: normal;
 }
 
 .sapUiSizeCompact .sapUiForm.sapUiFormEdit .sapMObjStatus {
 	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 	line-height: normal;
 }
 
